Fix #186: Correct alignments of BS3 controls in edit mode

--- a/src/assets/css/kv-detail-view.css
+++ b/src/assets/css/kv-detail-view.css
@@ -21,10 +21,6 @@
     border-bottom: none;
 }
 
-.kv-container-bs4 .form-group:not(.has-error) {
-    margin: 0;
-}
-
 .kv-container-bs4 .card > .kv-detail-view > .table-bordered > tbody > tr > td:first-child,
 .panel > .kv-detail-view > .table-bordered > tbody > tr > td:first-child {
     border-left: 0;
@@ -41,10 +37,11 @@
     border-bottom-left-radius: 0.25rem;
 }
 
-.kv-form-attribute .help-block {
-    margin-bottom: -15px;
+.kv-form-attribute .form-group, .kv-form-attribute .help-block {
+    margin-bottom: 0;
 }
 
+.kv-form-attribute > div:not(.has-error) .help-block,
 .kv-edit-mode .kv-edit-hidden,
 .kv-view-mode .kv-view-hidden {
     display: none;
@@ -74,10 +71,6 @@
 
 .kv-edit-mode .kv-detail-view {
     overflow-y: hidden;
-}
-
-.kv-form-attribute .row {
-    margin-bottom: -5px;
 }
 
 .kv-edit-mode table {
